--- a/index.html
+++ b/index.html
@@ -88,6 +88,28 @@
         </div>
     </nav>
 
+    <nav class="fixed w-full z-50 px-4 md:px-6 py-4 bg-[#0f0715]/80 dark:bg-[#0f0715]/80 bg-white/80 backdrop-blur-md border-b border-purple-900/10">
+    <div class="max-w-6xl mx-auto flex justify-between items-center gap-2">
+        <div class="text-xl md:text-2xl font-800 text-gradient flex-shrink-0">NA.</div>
+        
+        <div class="flex items-center gap-3">
+            <div class="hidden sm:flex space-x-4 md:space-x-8 font-semibold text-[10px] md:text-sm uppercase tracking-widest">
+                <a href="#keahlian" class="hover:text-purple-400 transition">Keahlian</a>
+                <a href="#pengalaman" class="hover:text-purple-400 transition">Pengalaman</a>
+            </div>
+
+            <button id="theme-toggle" class="p-2 rounded-full glass-card hover:scale-110 transition flex-shrink-0">
+                <i id="theme-icon-dark" data-lucide="moon" class="w-4 h-4 md:w-5 md:h-5 text-purple-400"></i>
+                <i id="theme-icon-light" data-lucide="sun" class="hidden w-4 h-4 md:w-5 md:h-5 text-yellow-500"></i>
+            </button>
+
+            <a href="#kontak" class="vibrant-gradient px-4 py-2 md:px-6 md:py-2 rounded-full text-white text-[10px] md:text-sm font-bold flex-shrink-0 shadow-lg shadow-purple-500/20">
+                Hire Me
+            </a>
+        </div>
+    </div>
+    </nav>
+
     <section class="min-h-screen flex items-center justify-center pt-20 px-6">
         <div class="max-w-6xl mx-auto grid md:grid-cols-2 gap-12 items-center">
             <div data-aos="fade-right" data-aos-duration="1000">
