Update navbar lagi 3

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     </style>
 </head>
 <body class="overflow-x-hidden">
-    <nav class="fixed w-full z-50 px-4 md:px-6 py-4 bg-[#0f0715]/80 dark:bg-[#0f0715]/80 backdrop-blur-md border-b border-purple-900/10">
+    <nav class="fixed w-full z-50 px-4 md:px-6 py-4 dark:bg-[#0f0715]/80 backdrop-blur-md border-b border-purple-900/10">
     <div class="max-w-6xl mx-auto flex justify-between items-center gap-2">
         <div class="text-xl md:text-2xl font-800 text-gradient flex-shrink-0">NA.</div>
         
