--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 <body class="overflow-x-hidden">
     <nav class="fixed w-full z-50 px-4 md:px-6 py-4 dark:bg-[#0f0715]/80 backdrop-blur-md border-b border-purple-900/10">
     <div class="max-w-6xl mx-auto flex justify-between items-center gap-2">
-        <div class="text-xl md:text-2xl font-800 text-gradient flex-shrink-0">NA.</div>
+        <div class="text-xl md:text-2xl font-800 text-gradient flex-shrink-0">HW.</div>
         
         <div class="flex items-center gap-3">
             <div class="hidden sm:flex space-x-4 md:space-x-8 font-semibold text-[10px] md:text-sm uppercase tracking-widest">
@@ -88,7 +88,7 @@
             </button>
 
             <a href="#kontak" class="vibrant-gradient px-4 py-2 md:px-6 md:py-2 rounded-full text-white text-[10px] md:text-sm font-bold flex-shrink-0 shadow-lg shadow-purple-500/20">
-                Hire Me
+                Kontak
             </a>
         </div>
     </div>
@@ -98,7 +98,7 @@
         <div class="max-w-6xl mx-auto grid md:grid-cols-2 gap-12 items-center">
             <div data-aos="fade-right" data-aos-duration="1000">
                 <h1 class="text-5xl md:text-7xl font-800 leading-tight">
-                    Hi, saya <br><span class="text-gradient">[Nama Anda]</span>
+                    Hi, saya <br><span class="text-gradient">Hadi Wahyudi</span>
                 </h1>
                 <p class="text-xl text-purple-200 mt-4 font-semibold italic">Quality Assurance Engineer</p>
                 <p class="mt-6 text-gray-400 leading-relaxed max-w-lg">
@@ -142,8 +142,8 @@
                     </div>
                     <h3 class="text-xl font-bold mb-4">Automation</h3>
                     <ul class="text-gray-400 space-y-2 text-sm">
-                        <li>• Selenium & Appium</li>
-                        <li>• Cypress / Playwright</li>
+                        <li>• Selenium WebDriver</li>
+                        <li>• Playwright</li>
                         <li>• API Testing (Postman)</li>
                     </ul>
                 </div>
@@ -154,7 +154,7 @@
                     <h3 class="text-xl font-bold mb-4">Tools & Dev</h3>
                     <ul class="text-gray-400 space-y-2 text-sm">
                         <li>• Jira & Agile Scrum</li>
-                        <li>• Git / CI-CD</li>
+                        <li>• Git</li>
                         <li>• SQL Database</li>
                     </ul>
                 </div>
@@ -167,17 +167,17 @@
         <div class="space-y-8">
             <div class="glass-card p-8 rounded-2xl flex flex-col md:flex-row justify-between gap-4" data-aos="fade-left">
                 <div>
-                    <h3 class="text-xl font-bold text-white">Senior QA Engineer</h3>
-                    <p class="text-purple-400 font-semibold">PT. Teknologi Maju</p>
+                    <h3 class="text-xl font-bold text-white">Quality Assurance Engineer</h3>
+                    <p class="text-purple-400 font-semibold">Salah satu Bank Syariah Digital di Indonesia</p>
                 </div>
-                <p class="text-gray-500 font-medium">2022 — Sekarang</p>
+                <p class="text-gray-500 font-medium">2021 — 2025</p>
             </div>
             <div class="glass-card p-8 rounded-2xl flex flex-col md:flex-row justify-between gap-4" data-aos="fade-left" data-aos-delay="100">
                 <div>
-                    <h3 class="text-xl font-bold text-white">QA Tester</h3>
-                    <p class="text-purple-400 font-semibold">Startup Digital Inovasi</p>
+                    <h3 class="text-xl font-bold text-white">Quality Assurance Engineer</h3>
+                    <p class="text-purple-400 font-semibold">Salah satu Bank BUMN Indonesia</p>
                 </div>
-                <p class="text-gray-500 font-medium">2020 — 2021</p>
+                <p class="text-gray-500 font-medium">2025 — 2025</p>
             </div>
         </div>
     </section>
@@ -195,7 +195,7 @@
                         <h3 class="text-2xl font-bold text-white mb-2">ISTQB® Certified Tester</h3>
                         <p class="text-gray-400">Foundation Level (CTFL) - Standar global untuk keahlian pengujian perangkat lunak profesional.</p>
                     </div>
-                    <p class="mt-6 text-sm text-purple-400 font-semibold">Diterbitkan oleh ISTQB Global • 2024</p>
+                    <p class="mt-6 text-sm text-purple-400 font-semibold">Diterbitkan oleh ISTQB Global • 2026</p>
                 </div>
 
                 <div class="glass-card p-8 rounded-3xl flex flex-col justify-between" data-aos="zoom-in" data-aos-delay="100">
@@ -210,8 +210,9 @@
                     <i data-lucide="code-2" class="w-10 h-10 text-pink-400 mb-4"></i>
                     <div>
                         <h3 class="text-xl font-bold text-white mb-2">Automation</h3>
-                        <p class="text-gray-400 text-sm">Cypress Advanced Suite</p>
+                        <p class="text-gray-400 text-sm">Playwright: Web Automation Testing From Zero To Hero</p>
                     </div>
+                    <p class="mt-6 text-sm text-purple-400 font-semibold">Diterbitkan oleh Udemy • 2026</p>
                 </div>
 
                 <div class="md:col-span-3 glass-card p-6 rounded-2xl flex flex-wrap items-center justify-between gap-4 border-dashed border-purple-500/30" data-aos="fade-up">
@@ -247,21 +248,21 @@
                 </thead>
                 <tbody class="divide-y divide-purple-900/20 text-gray-300">
                     <tr class="hover:bg-white/5 transition">
-                        <td class="p-6 font-semibold text-white">2018 - 2022</td>
+                        <td class="p-6 font-semibold text-white">2015 - 2019</td>
                         <td class="p-6">
-                            <span class="block font-bold text-white">Universitas Teknologi Indonesia</span>
-                            <span class="text-sm text-gray-500">Jakarta, Indonesia</span>
+                            <span class="block font-bold text-white">Universitas Jenderal Achmad Yani</span>
+                            <span class="text-sm text-gray-500">Yogyakarta, Indonesia</span>
                         </td>
-                        <td class="p-6 hidden md:table-cell text-gray-500">S1 Teknik Informatika (IPK: 3.85/4.00)</td>
+                        <td class="p-6 hidden md:table-cell text-gray-500">S1 Teknik Informatika (IPK: 3.31/4.00)</td>
                         <td class="p-6">
                             <span class="px-3 py-1 bg-green-500/10 text-green-400 text-xs rounded-full border border-green-500/20">Lulus</span>
                         </td>
                     </tr>
                     <tr class="hover:bg-white/5 transition">
-                        <td class="p-6 font-semibold text-white">2023 - 2024</td>
+                        <td class="p-6 font-semibold text-white">2021 - 2021</td>
                         <td class="p-6">
-                            <span class="block font-bold text-white">QA Bootcamp Intensive</span>
-                            <span class="text-sm text-gray-500">Remote - Global Academy</span>
+                            <span class="block font-bold text-white">QA Bootcamp Academy</span>
+                            <span class="text-sm text-gray-500">Remote - Xsis Academy</span>
                         </td>
                         <td class="p-6 hidden md:table-cell text-gray-500">Software Quality Assurance Specialist</td>
                         <td class="p-6">
@@ -281,7 +282,7 @@
             </p>
 
             <div class="grid grid-cols-1 md:grid-cols-3 gap-6" data-aos="fade-up" data-aos-delay="200">
-                <a href="https://wa.me/628123456789" target="_blank" class="glass-card p-8 rounded-2xl flex flex-col items-center group hover:vibrant-gradient transition-all duration-500">
+                <a href="https://wa.me/6285601357435" target="_blank" class="glass-card p-8 rounded-2xl flex flex-col items-center group hover:vibrant-gradient transition-all duration-500">
                     <div class="w-12 h-12 bg-green-500/20 rounded-full flex items-center justify-center mb-4">
                         <i data-lucide="message-circle" class="text-green-400"></i>
                     </div>
@@ -289,15 +290,15 @@
                     <p class="text-sm text-gray-500 group-hover:text-purple-100 mt-2">Respon Cepat</p>
                 </a>
 
-                <a href="mailto:halo@namaanda.com" class="glass-card p-8 rounded-2xl flex flex-col items-center group hover:vibrant-gradient transition-all duration-500">
+                <a href="mailto:wahyuhadi1296@gmail.com" class="glass-card p-8 rounded-2xl flex flex-col items-center group hover:vibrant-gradient transition-all duration-500">
                     <div class="w-12 h-12 bg-purple-500/20 rounded-full flex items-center justify-center mb-4">
                         <i data-lucide="mail" class="text-purple-400"></i>
                     </div>
                     <h3 class="font-bold text-white">Email</h3>
-                    <p class="text-sm text-gray-500 group-hover:text-purple-100 mt-2">halo@namaanda.com</p>
+                    <p class="text-sm text-gray-500 group-hover:text-purple-100 mt-2">wahyuhadi1296@gmail.com</p>
                 </a>
 
-                <a href="https://linkedin.com/in/usernameanda" target="_blank" class="glass-card p-8 rounded-2xl flex flex-col items-center group hover:vibrant-gradient transition-all duration-500">
+                <a href="https://linkedin.com/in/" target="_blank" class="glass-card p-8 rounded-2xl flex flex-col items-center group hover:vibrant-gradient transition-all duration-500">
                     <div class="w-12 h-12 bg-blue-500/20 rounded-full flex items-center justify-center mb-4">
                         <i data-lucide="linkedin" class="text-blue-400"></i>
                     </div>
@@ -311,7 +312,7 @@
                     <i data-lucide="map-pin" class="w-4 h-4 text-purple-500"></i>
                     <span>Jakarta, Indonesia</span>
                 </div>
-                <p>&copy; 2026 [Nama Anda]. Built with Precision.</p>
+                <p>&copy; 2026 Hadiwah. Built with Precision.</p>
             </div>
         </div>
     </footer>
