--- a/index.html
+++ b/index.html
@@ -195,15 +195,7 @@
                         <h3 class="text-2xl font-bold text-white mb-2">ISTQB® Certified Tester</h3>
                         <p class="text-gray-400">Foundation Level (CTFL) - Standar global untuk keahlian pengujian perangkat lunak profesional.</p>
                     </div>
-                    <p class="mt-6 text-sm text-purple-400 font-semibold">Diterbitkan oleh ISTQB Global • 2026</p>
-                </div>
-
-                <div class="glass-card p-8 rounded-3xl flex flex-col justify-between" data-aos="zoom-in" data-aos-delay="100">
-                    <i data-lucide="shield-check" class="w-10 h-10 text-blue-400 mb-4"></i>
-                    <div>
-                        <h3 class="text-xl font-bold text-white mb-2">API Security</h3>
-                        <p class="text-gray-400 text-sm">Postman Certified Expert</p>
-                    </div>
+                    <p class="mt-6 text-sm text-purple-400 font-semibold">Diterbitkan oleh Indonesia Software Testing Board (IDSTB) • 2026</p>
                 </div>
 
                 <div class="glass-card p-8 rounded-3xl flex flex-col justify-between" data-aos="zoom-in" data-aos-delay="200">
@@ -214,21 +206,7 @@
                     </div>
                     <p class="mt-6 text-sm text-purple-400 font-semibold">Diterbitkan oleh Udemy • 2026</p>
                 </div>
-
-                <div class="md:col-span-3 glass-card p-6 rounded-2xl flex flex-wrap items-center justify-between gap-4 border-dashed border-purple-500/30" data-aos="fade-up">
-                    <div class="flex items-center gap-4">
-                        <div class="p-3 bg-white/5 rounded-xl">
-                            <i data-lucide="scroll-text" class="w-6 h-6 text-yellow-500"></i>
-                        </div>
-                        <div>
-                            <h4 class="font-bold">Project Management for QA</h4>
-                            <p class="text-xs text-gray-500">Google Professional Certificate</p>
-                        </div>
-                    </div>
-                    <button class="text-sm font-bold text-purple-400 hover:text-purple-300 flex items-center gap-1">
-                        Lihat Kredensial <i data-lucide="external-link" class="w-4 h-4"></i>
-                    </button>
-                </div>
+                
             </div>
         </div>
     </section>
