--- a/index.html
+++ b/index.html
@@ -167,14 +167,14 @@
         <div class="space-y-8">
             <div class="glass-card p-8 rounded-2xl flex flex-col md:flex-row justify-between gap-4" data-aos="fade-left">
                 <div>
-                    <h3 class="text-xl font-bold text-white">Quality Assurance Engineer</h3>
+                    <h3 class="text-xl font-bold text-white">Quality Assurance Manual & Automation</h3>
                     <p class="text-purple-400 font-semibold">Salah satu Bank Syariah Digital di Indonesia</p>
                 </div>
                 <p class="text-gray-500 font-medium">2021 — 2025</p>
             </div>
             <div class="glass-card p-8 rounded-2xl flex flex-col md:flex-row justify-between gap-4" data-aos="fade-left" data-aos-delay="100">
                 <div>
-                    <h3 class="text-xl font-bold text-white">Quality Assurance Engineer</h3>
+                    <h3 class="text-xl font-bold text-white">Quality Assurance Manual</h3>
                     <p class="text-purple-400 font-semibold">Salah satu Bank BUMN Indonesia</p>
                 </div>
                 <p class="text-gray-500 font-medium">2025 — 2025</p>
