--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
             <div class="relative flex justify-center" data-aos="zoom-in" data-aos-duration="1000">
                 <div class="w-64 h-64 md:w-80 md:h-80 rounded-full p-2 vibrant-gradient shadow-[0_0_50px_rgba(168,85,247,0.4)]">
                     <div class="w-full h-full rounded-full overflow-hidden border-4 border-[#0f0715]">
-                        <img src="https://images.unsplash.com/photo-1573496359142-b8d87734a5a2?auto=format&fit=crop&q=80&w=400" alt="Profile" class="w-full h-full object-cover">
+                        <img src="./foto.jpg" alt="Profile" class="w-full h-full object-cover">
                     </div>
                 </div>
             </div>
