--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 
     <section class="min-h-screen flex items-center justify-center pt-20 px-6">
         <div class="max-w-6xl mx-auto grid md:grid-cols-2 gap-12 items-center">
-            <div data-aos="fade-right" data-aos-duration="1000">
+            <div data-aos="fade-up" data-aos-duration="1000">
                 <h1 class="text-5xl md:text-7xl font-800 leading-tight">
                     Hi, saya <br><span class="text-gradient">Hadi Wahyudi</span>
                 </h1>
@@ -162,14 +162,14 @@
     <section id="pengalaman" class="py-24 px-6 max-w-4xl mx-auto">
         <h2 class="text-4xl font-800 mb-12 text-center" data-aos="fade-up">Pengalaman <span class="text-gradient">Kerja</span></h2>
         <div class="space-y-8">
-            <div class="glass-card p-8 rounded-2xl flex flex-col md:flex-row justify-between gap-4" data-aos="fade-left">
+            <div class="glass-card p-8 rounded-2xl flex flex-col md:flex-row justify-between gap-4" data-aos="fade-up">
                 <div>
                     <h3 class="text-xl font-bold text-white">Quality Assurance Manual & Automation</h3>
                     <p class="text-purple-400 font-semibold">Salah satu Bank Syariah Digital di Indonesia</p>
                 </div>
                 <p class="text-gray-500 font-medium">2021 — 2025</p>
             </div>
-            <div class="glass-card p-8 rounded-2xl flex flex-col md:flex-row justify-between gap-4" data-aos="fade-left" data-aos-delay="100">
+            <div class="glass-card p-8 rounded-2xl flex flex-col md:flex-row justify-between gap-4" data-aos="fade-up" data-aos-delay="100">
                 <div>
                     <h3 class="text-xl font-bold text-white">Quality Assurance Manual</h3>
                     <p class="text-purple-400 font-semibold">Salah satu Bank BUMN Indonesia</p>
